Makes test.html run both jQuery UI version

--- a/test/test.css
+++ b/test/test.css
@@ -45,3 +45,10 @@
 .text-right{
     text-align: right;
 }
+
+.jquery-ui-version {
+    line-height: 1.5;
+    border: 1px solid #FFD836;
+    padding: 10px;
+    background-color: #ffff8f;
+}
